--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,33 +6,32 @@
     <title>Formula 1</title>
 </head>
 <body>
-    <h1> Drivers </h1>
-    <ul id="list">
-    </ul>
+    <h1>Drivers</h1>
+    <ul id="list"></ul>
 
     <script>
-        function response_received(response){
-            consolo.log("SUCCES")
-            console.log(response)
-
+        
+        function response_received(response) {
             return response.json()
         }
-        function parse_data(content){
-            console.log(content)
-            const list = document.getElementById("list")
-            for (let index = 0; index < content.length; index++) {
+        function parse_data(content) {
+            console.log(content);
+            const pilotos = content.pilotos; 
+            const list = document.getElementById("list");
+
+            pilotos.forEach(piloto => {
                 const item = document.createElement("li");
-                item.append(content[index].name);
-                list.append(item);
-            }
+            item.textContent = piloto.Nombre + ' ' + piloto.Apellido; 
+            list.appendChild(item);
+            });
         }
 
-        function request_error(error){
-            consolo.log("ERROR")
-            console.log(error)
+        function request_error(error) {
+            console.log("ERROR")
+            console.log(error);
         }
-        
-        fetch("http://localhost:5000/drivers")
+
+        fetch("http://localhost:5000/pilotos")
             .then(response_received)
             .then(parse_data)
             .catch(request_error)
