--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,11 @@
     <title>Formula 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/frontend/styles.css">
+    <style>
+    a{
+      color: #ddd;
+    }
+  </style>
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
@@ -19,20 +23,20 @@
         </nav>
         <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Inicio</a>
+                <a class="navbar-brand" href="index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="#">Resultados</a>
+                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="resultados.html">Resultados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pilotos</a>
+                            <a class="nav-link" href="pilotos.html">Pilotos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Equipos</a>
+                            <a class="nav-link" href="equipos.html">Equipos</a>
                         </li>
                     </ul>
                 </div>
