--- a/frontend/equipos.html
+++ b/frontend/equipos.html
@@ -3,37 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formula 1</title>
+    <title>Formula 1 - Equipos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <style>
-     a{
+      a {
       color: #ddd;
-    }
-    h1{
+  }
+  h1 {
       font-weight: 700;
-    }
-      
-      .team-container {
-        border: 1px solid #ddd;
-        padding: 10px;
-        margin-bottom: 10px;
-        display: inline-block;
-        width: calc(33% - 20px);
-        text-align: center;
-      }
-
-      .team-name {
-        font-weight: bold;
-      }
-
-      .team-container img {
-        width: 200px;
-      }
-    </style>
+      text-align: center;
+  }
+  .team-container {
+      border: 1px solid #ddd;
+      padding: 10px;
+      margin-bottom: 10px;
+      width: calc(50% - 20px);
+      float: left;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  .team-container a {
+      color: #000;
+      text-decoration: none;
+  }
+  .team-container a:hover {
+      color: blue;
+      text-decoration: underline;
+  }
+  .team-name {
+      font-weight: bold;
+      margin-bottom: 10px;
+      text-align: center;
+  }
+  .team-image {
+      width: 100%;
+      max-width: 150px;
+      display: block;
+      margin: 0 auto 10px;
+  }
+  .team-info {
+      text-align: center;
+      margin-bottom: 0;
+  }
+</style>
 </head>
 <body>
-  <header class="container-fluid bg-danger d-flex">
+<header class="container-fluid bg-danger d-flex">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -43,7 +62,6 @@
     </nav>
     <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
         <div class="container-fluid">
-            
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -53,65 +71,68 @@
                         <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
                     </li>
                     <li class="nav-item">
-                        <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
+                      <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-
-<h1 style="text-align: center;">Equipos de Formula 1</h1>
-<div id="team-list"></div>
-
+<div class="container my-4">
+    <h1>Equipos de Fórmula 1</h1>
+    <div id="team-list" class="row"></div>
+</div>
 <script>
-  function fetch_escuderias() {
-    fetch("http://localhost:5000/escuderias")
-      .then(response => response.json())
-      .then(data => {
-        parse_data_escuderias(data);
-      })
-      .catch(error => {
-        console.error('Error fetching data:', error);
-      });
-  }
+    function fetch_escuderias() {
+        fetch("http://localhost:5000/escuderias")
+            .then(response => response.json())
+            .then(data => {
+                parse_data_escuderias(data);
+            })
+            .catch(error => {
+                console.error('Error fetching data:', error);
+            });
+    }
 
-  function parse_data_escuderias(content) {
-    console.log(content);
-    const escuderias = content.escuderias;
-    const teamList = document.getElementById("team-list");
-    teamList.innerHTML = '';
+    function parse_data_escuderias(content) {
+        console.log(content);
+        const escuderias = content.escuderias;
+        const teamList = document.getElementById("team-list");
+        teamList.innerHTML = '';
 
-    escuderias.forEach((escuderia) => {
-      const container = document.createElement('div');
-      container.classList.add('team-container');
+        escuderias.forEach((escuderia) => {
+            const container = document.createElement('div');
+            container.classList.add('team-container');
 
-      const teamName = document.createElement('h3');
-      teamName.classList.add('team-name');
-      teamName.textContent = escuderia.NombreEscuderia;
+            const card = document.createElement("a");
+            card.setAttribute("href", `/escuderias?id=${escuderia.id}`);
 
-      const teamImage = document.createElement('img');
-      teamImage.classList.add('team-image');
-      teamImage.src = escuderia.ImagenEscuderia;
+            const teamName = document.createElement('h3');
+            teamName.classList.add('team-name');
+            teamName.textContent = escuderia.nombre;
 
-      const teamInfo = document.createElement('p');
-      teamInfo.textContent = `Campeonatos: ${escuderia.CampeonatosMundiales}, Jefe de Equipo: ${escuderia.JefedeEquipo}`;
+            const teamImage = document.createElement('img');
+            teamImage.classList.add('team-image');
+            teamImage.src = escuderia.imagen;
 
-      container.appendChild(teamName);
-      container.appendChild(teamImage);
-      container.appendChild(teamInfo);
+            const teamInfo = document.createElement('p');
+            teamInfo.textContent = `Campeonatos: ${escuderia.campeonatos_mundiales}, Jefe de Equipo: ${escuderia.lider}`;
 
-      teamList.appendChild(container);
+            card.appendChild(teamName);
+            card.appendChild(teamImage);
+            card.appendChild(teamInfo);
+
+            container.appendChild(card);
+            teamList.appendChild(container);
+        });
+    }
+
+    document.getElementById("escuderias-link").addEventListener("click", function(event) {
+        event.preventDefault();
+        fetch_escuderias();
     });
-  }
 
-  document.getElementById("escuderias-link").addEventListener("click", function(event) {
-    event.preventDefault();
     fetch_escuderias();
-  });
-
-  fetch_escuderias();
 </script>
-
 </body>
 </html>
