Agregue al menu lo de circuitos

--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -72,11 +72,17 @@
                         <li class="nav-item">
                             <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
                         </li>
-                    </ul>
-                </div>
+                    <li class="nav-item">
+                      <a class="nav-link" href="circuitos.html">Circuitos</a>
+                  </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+
+
+    
+</header>
     <div class="container my-4">
         <h1>Pilotos de Fórmula 1</h1>
         <div id="driver-list" class="row"></div>
