Modifico el href de la card para que redireccione bien

--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -111,7 +111,7 @@
                 container.classList.add('driver-container', 'col-6', 'col-md-4', 'col-lg-3', 'col-xl-2');
 
                 const card = document.createElement("a");
-                card.setAttribute("href", `/pilotos?id=${piloto.id}`);
+                card.setAttribute("href", `pilotos/index.html?id=${piloto.id}`);
 
                 const driverName = document.createElement('h3');
                 driverName.classList.add('driver-name');
