Modifico endpoint para los pilotos, y la etiqueta p del html para ver el nombre de la escuderia

--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -123,7 +123,7 @@
 
                 const driverInfo = document.createElement('p');
                 driverInfo.classList.add('driver-info');
-                driverInfo.textContent = `Equipo: ${piloto.equipo}`;
+                driverInfo.textContent = `Equipo: ${piloto.escuderia}`;
 
                 card.appendChild(driverName);
                 card.appendChild(driverImage);
