Agrego cambios en el endpoint equipos individual, modifico el href del html equipos y la url que fetchea el endpoint

--- a/frontend/equipos.html
+++ b/frontend/equipos.html
@@ -111,7 +111,7 @@
             container.classList.add('team-container');
 
             const card = document.createElement("a");
-            card.setAttribute("href", `/escuderias?id=${escuderia.id}`);
+            card.setAttribute("href", `escuderias/index.html?id=${escuderia.id}`);
 
             const teamName = document.createElement('h3');
             teamName.classList.add('team-name');
