--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -5,50 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula 1 - Pilotos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <style>
-        a {
-            color: #ddd;
-        }
-        h1 {
-            font-weight: 700;
-            text-align: center;
-        }
-        .driver-container {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            width: calc(50% - 20px);
-            float: left;
-            box-sizing: border-box;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        .driver-container a {
-            color: #000;
-            text-decoration: none;
-        }
-        .driver-container a:hover {
-            color: blue;
-            text-decoration: underline;
-        }
-        .driver-name {
-            font-weight: bold;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-        .driver-image {
-            width: 100%;
-            max-width: 150px;
-            display: block;
-            margin: 0 auto 10px;
-        }
-        .driver-info {
-            text-align: center;
-            margin-bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" src="style.css">
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
