--- a/frontend/equipos.html
+++ b/frontend/equipos.html
@@ -6,50 +6,7 @@
     <title>Formula 1 - Equipos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <style>
-      a {
-      color: #ddd;
-  }
-  h1 {
-      font-weight: 700;
-      text-align: center;
-  }
-  .team-container {
-      border: 1px solid #ddd;
-      padding: 10px;
-      margin-bottom: 10px;
-      width: calc(50% - 20px);
-      float: left;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  }
-  .team-container a {
-      color: #000;
-      text-decoration: none;
-  }
-  .team-container a:hover {
-      color: blue;
-      text-decoration: underline;
-  }
-  .team-name {
-      font-weight: bold;
-      margin-bottom: 10px;
-      text-align: center;
-  }
-  .team-image {
-      width: 100%;
-      max-width: 150px;
-      display: block;
-      margin: 0 auto 10px;
-  }
-  .team-info {
-      text-align: center;
-      margin-bottom: 0;
-  }
-</style>
+    <link rel="stylesheet" src="style.css">
 </head>
 <body>
  <header class="container-fluid bg-danger d-flex">
