--- a/frontend/circuitos.html
+++ b/frontend/circuitos.html
@@ -18,39 +18,38 @@
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
-                </a>
-            </div>
-        </nav>
-        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="resultados.html">Resultados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
-                        </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="circuitos.html">Circuitos</a>
-                  </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+           <nav class="navbar navbar-expand-lg bg-body-tertiary">
+               <div class="container">
+                   <a class="navbar-brand" href="index.html">
+                       <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                   </a>
+               </div>
+           </nav>
+           <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+               <div class="container-fluid">
+                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                           <li class="nav-item">
+                               <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="resultados.html">Resultados</a>
+                           </li>
+                           <li class="nav-item">
+                               <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
+                           </li>
+                           <li class="nav-item">
+                               <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
+                           </li>
+                       <li class="nav-item">
+                         <a id="circuitos-link" class="nav-link" href="circuitos.html">Circuitos</a>
+                     </li>
+                   </ul>
+               </div>
+           </div>
+       </nav>
 
     
 </header>
 <div class="container">
-    <h1>Circuitos Formula 1 2024</h1>
+    <h1>Circuitos 2024</h1>
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
@@ -68,43 +67,60 @@
 </div>
 <script>
 
-
 function fetch_circuitos() {
-            fetch("http://localhost:5000/circuitos")
-                .then(response => response.json())
-                .then(data => {
-                    parse_data_circuitos(data);
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                });
-        }
+    fetch("http://localhost:5000/circuitos")
+        .then(response => response.json())
+        .then(data => {
+            parse_data_circuitos(data);
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+}
 
-        function parse_data_circuitos(content) {
-            console.log(content);
-            const circuits = content.circuits;
-            const circuitList = document.getElementById("circuit-list");
-            circuitList.innerHTML = '';
+function createCircuitRow(circuit) {
+    const tableRow = document.createElement('tr');
 
-            circuits.forEach((circuit) => {
-                const tableRow = document.createElement('tr');
-                const circuitName = document.createElement('td');
-                circuitName.textContent = circuit.nombre;
-                const circuitCity = document.createElement('td');
-                circuitCity.textContent = circuit.ciudad;
-                const circuitDistance = document.createElement('td');
-                circuitDistance.textContent = circuit.distancia;
+    const circuitName = document.createElement('td');
+    circuitName.textContent = circuit.nombre_circuito;
 
-              tableRow.appendChild(circuitName);
-              tableRow.appendChild(circuitCity);
-              tableRow.appendChild(circuitDistance);
-              circuitsList.appendChild(tableRow);
+    const circuitCity = document.createElement('td');
+    circuitCity.textContent = circuit.pais;
 
-            });
-        }
+    const circuitDistance = document.createElement('td');
+    circuitDistance.textContent = circuit.distancia;
 
-    
-    </script>
+    const circuitFecha = document.createElement('td');
+    const fecha = new Date(circuit.fecha);
+    const options = { day: 'numeric', month: 'long' };
+    circuitFecha.textContent = fecha.toLocaleDateString('es-ES', options);
+
+    tableRow.appendChild(circuitName);
+    tableRow.appendChild(circuitCity);
+    tableRow.appendChild(circuitDistance);
+    tableRow.appendChild(circuitFecha);
+
+    return tableRow;
+}
+
+function parse_data_circuitos(content) {
+    console.log(content);
+    const circuits = content.circuitos;  
+    const circuitsList = document.getElementById("circuits-list");
+    circuitsList.innerHTML = '';
+    circuits.forEach(circuit => {
+        const tableRow = createCircuitRow(circuit);
+        circuitsList.appendChild(tableRow);
+    });
+}
+
+document.getElementById("circuitos-link").addEventListener("click", function(event) {
+        event.preventDefault();
+        fetch_circuitos();
+    });
+
+    fetch_circuitos();
+
 
 </script>
 </body>
