--- a/frontend/equipos.html
+++ b/frontend/equipos.html
@@ -6,7 +6,7 @@
     <title>Formula 1 - Equipos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-     <style>
+    <style>
       a {
       color: #ddd;
   }
@@ -45,44 +45,39 @@
       display: block;
       margin: 0 auto 10px;
   }
-  .team-info {
-      text-align: center;
-      margin-bottom: 0;
-  }
+
+
 </style>
 </head>
 <body>
- <header class="container-fluid bg-danger d-flex">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
-                </a>
-            </div>
-        </nav>
-        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="resultados.html">Resultados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
-                        </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="circuitos.html">Circuitos</a>
-                  </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    
+    <header class="container-fluid bg-danger d-flex">
+         <nav class="navbar navbar-expand-lg bg-body-tertiary">
+             <div class="container">
+                 <a class="navbar-brand" href="index.html">
+                     <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                 </a>
+             </div>
+         </nav>
+         <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+             <div class="container-fluid">
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                         <li class="nav-item">
+                             <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="fechas/index.html?fecha=2023">Resultados</a>
+                         </li>
+                         <li class="nav-item">
+                             <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
+                         </li>
+                         <li class="nav-item">
+                             <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
+                         </li>
+                     <li class="nav-item">
+                       <a class="nav-link" href="circuitos.html">Circuitos</a>
+                   </li>
+                 </ul>
+             </div>
+         </div>
+     </nav>
 </header>
 <div class="container my-4">
     <h1>Equipos de Fórmula 1</h1>
@@ -111,7 +106,7 @@
             container.classList.add('team-container');
 
             const card = document.createElement("a");
-            card.setAttribute("href", `escuderias/index.html?id=${escuderia.id}`);
+            card.setAttribute("href", `/escuderias?id=${escuderia.id}`);
 
             const teamName = document.createElement('h3');
             teamName.classList.add('team-name');
@@ -121,12 +116,10 @@
             teamImage.classList.add('team-image');
             teamImage.src = escuderia.imagen;
 
-            const teamInfo = document.createElement('p');
-            teamInfo.textContent = `Campeonatos: ${escuderia.campeonatos_mundiales}, Jefe de Equipo: ${escuderia.lider}`;
 
             card.appendChild(teamName);
             card.appendChild(teamImage);
-            card.appendChild(teamInfo);
+        
 
             container.appendChild(card);
             teamList.appendChild(container);
