--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="fechas/index.html?fecha=2023">Resultados 2023</a>
+                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="fechas/index.html?fecha=2023">Resultados</a>
                         </li>
                         <li class="nav-item">
                             <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
