--- a/frontend/pilotos.html
+++ b/frontend/pilotos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula 1 - Pilotos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-     <style>
+    <style>
         a {
             color: #ddd;
         }
@@ -44,45 +44,40 @@
             display: block;
             margin: 0 auto 10px;
         }
-        .driver-info {
-            text-align: center;
-            margin-bottom: 0;
-        }
+
+
     </style>
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
-                </a>
-            </div>
-        </nav>
-        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="resultados.html">Resultados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
-                        </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="circuitos.html">Circuitos</a>
-                  </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    
-</header>
+         <nav class="navbar navbar-expand-lg bg-body-tertiary">
+             <div class="container">
+                 <a class="navbar-brand" href="index.html">
+                     <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                 </a>
+             </div>
+         </nav>
+         <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+             <div class="container-fluid">
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                         <li class="nav-item">
+                             <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="fechas/index.html?fecha=2023">Resultados</a>
+                         </li>
+                         <li class="nav-item">
+                             <a id="pilotos-link" class="nav-link" href="pilotos.html">Pilotos</a>
+                         </li>
+                         <li class="nav-item">
+                             <a id="escuderias-link" class="nav-link" href="equipos.html">Equipos</a>
+                         </li>
+                     <li class="nav-item">
+                       <a class="nav-link" href="circuitos.html">Circuitos</a>
+                   </li>
+                 </ul>
+             </div>
+         </div>
+     </nav>
+    </header>
     <div class="container my-4">
         <h1>Pilotos de Fórmula 1</h1>
         <div id="driver-list" class="row"></div>
@@ -111,7 +106,7 @@
                 container.classList.add('driver-container', 'col-6', 'col-md-4', 'col-lg-3', 'col-xl-2');
 
                 const card = document.createElement("a");
-                card.setAttribute("href", `pilotos/index.html?id=${piloto.id}`);
+                card.setAttribute("href", `/pilotos?id=${piloto.id}`);
 
                 const driverName = document.createElement('h3');
                 driverName.classList.add('driver-name');
@@ -121,13 +116,8 @@
                 driverImage.classList.add('driver-image');
                 driverImage.src = piloto.imagen;
 
-                const driverInfo = document.createElement('p');
-                driverInfo.classList.add('driver-info');
-                driverInfo.textContent = `Equipo: ${piloto.escuderia}`;
-
                 card.appendChild(driverName);
                 card.appendChild(driverImage);
-                card.appendChild(driverInfo);
 
                 container.appendChild(card);
                 driversList.appendChild(container);
