--- a/frontend/pilotos/index.html
+++ b/frontend/pilotos/index.html
@@ -17,7 +17,6 @@
         <div class="row">
             <div class="col-12 col-md-10 mx-auto">
                 <div class="card">
-                    <img id="imagen"/>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6">
@@ -54,14 +53,14 @@
                 return response.json();
             }
 
-            function parse_data(content) {
-                let piloto = content.piloto.shift();
+            function parse_data(piloto) {
+                console.log(piloto);
 
                 const name = document.getElementById("name");
                 name.innerText = `${piloto.numero} - ${piloto.nombre} ${piloto.apellido}`;
 
                 const equipo = document.getElementById("equipo");
-                equipo.innerText = `Equipo: ${piloto.equipo}`;
+                equipo.innerHTML = `Equipo: <a href="/escuderias?id=${piloto.id_escuderia}">${piloto.equipo}</a>`;
 
                 const image = document.getElementById("image");
                 image.src = piloto.imagen;
@@ -77,17 +76,13 @@
 
                 const campeonatos = document.getElementById("campeonatos");
                 campeonatos.innerText = piloto.campeonatos_mundiales;
-
-                const imagen = document.getElementById("imagen");
-                image.classList.add('driver-image');
-                image.src = piloto.imagen;
             }
 
             function handle_error(error) {
                 console.error('Error fetching data:', error);
             }
 
-            fetch(`http://localhost:5000/piloto/${id}`)
+            fetch(`http://localhost:5000/pilotos/${id}`)
                 .then(response_received)
                 .then(parse_data)
                 .catch(handle_error);
