--- a/frontend/pilotos/index.html
+++ b/frontend/pilotos/index.html
@@ -7,12 +7,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        a {
+       a {
             color: #ddd;
+        }
+        .card-body a {
+            color: #000; 
+            text-decoration: line;
+        }
+        .card-body a:hover {
+            color: blue; 
+            text-decoration: underline; 
+        }
+        .driver-name {
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+        .btn-volver {
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
     </style>
 </head>
 <body>
+    <input type="button" value="Volver" onclick="history.back()" class="btn btn-primary btn-volver">
     <div class="container my-4">
         <div class="row">
             <div class="col-12 col-md-10 mx-auto">
@@ -24,7 +43,7 @@
                             </div>
                             <div class="col-6">
                                 <h2 id="name"></h2>
-                                <h4 id="equipo"></h4>
+                                <h4>Equipo: <span id="equipo"></span></h4>
                                 <h5>Número: <span id="numero"></span></h5>
                                 <h5>Nacionalidad: <span id="nacionalidad"></span></h5>
                                 <h5>Podios: <span id="podios"></span></h5>
@@ -60,7 +79,7 @@
                 name.innerText = `${piloto.numero} - ${piloto.nombre} ${piloto.apellido}`;
 
                 const equipo = document.getElementById("equipo");
-                equipo.innerHTML = `Equipo: <a href="/escuderias?id=${piloto.id_escuderia}">${piloto.equipo}</a>`;
+                equipo.innerHTML = `<a href="/escuderias?id=${piloto.id_escuderia}">${piloto.equipo}</a>`;
 
                 const image = document.getElementById("image");
                 image.src = piloto.imagen;
