--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
   </style>
 </head>
 <body>
+
    <header class="container-fluid bg-danger d-flex">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
@@ -84,6 +85,20 @@
     </div>
   </div>
 </div>
+<div class="card mb-3" style="max-width:100%">
+  <div class="row g-0">
+      <div class="col-md-8">
+          <div class="card-body">
+              <h5 class="text-center card-title"><br/>¿Qué hace única a la Fórmula 1?</h5>
+              <p class="text-center card-text">La Fórmula 1 se destaca por combinar tecnología de vanguardia con la máxima velocidad en competiciones automovilísticas. Sus monoplazas son ejemplos de ingeniería avanzada y aerodinámica, diseñados para alcanzar velocidades extremas en circuitos internacionales.</p>
+          </div>
+      </div>
+      <div class="col-md-4">
+          <img class="rounded mx-auto d-block" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_960,q_auto/t_16by9Centre/f_auto/q_auto/fom-website/2024/Austria/GettyImages-2159784309" width="400px" class="img-fluid rounded-start">
+      </div>
+  </div>
+</div>
+
 
   <div class="card text-bg-dark bg-dark text-white mb-3" style="max-width:100%"  >
     <div class="card-body">
