--- a/frontend/escuderias/index.html
+++ b/frontend/escuderias/index.html
@@ -5,22 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo de Fórmula 1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <style>
         a {
             color: #ddd;
         }
-        .btn-volver {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
+
     </style>
 </head>
 
 <body>
-    <input type="button" value="Volver" onclick="history.back()" class="btn btn-primary btn-volver">
+    <header class="container-fluid bg-danger d-flex">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="rounded float-start" src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" alt="Formula1" width="100">
+                </a>
+            </div>
+        </nav>
+        <nav class="navbar navbar-expand-lg bg-danger bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active bs-light-text-emphasis" aria-current="page" href="../fechas/index.html?fecha=2023">Resultados</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="pilotos-link" class="nav-link" href="../pilotos.html">Pilotos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="escuderias-link" class="nav-link" href="../equipos.html">Equipos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../circuitos.html">Circuitos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container my-4">
         <div class="row">
             <div class="col-12 col-md-10 mx-auto">
