Agrego boton en barra de busqueda para poder indexar correctamente a las temporadas y boton de back para las tablas de posiciones

--- a/frontend/fechas/tabla/index.html
+++ b/frontend/fechas/tabla/index.html
@@ -8,6 +8,7 @@
     <title>Formula 1</title>
 </head>
 <body>
+    <input type="button" value="Volver" onclick="history.back()"/>
     <ol id="lista" class="list-group"></ol>
     <script>
         
