Edite un poco el diseño

--- a/frontend/pilotos/index.html
+++ b/frontend/pilotos/index.html
@@ -10,6 +10,11 @@
      
        a {
             color: #ddd;
+     }
+     .card {
+         border-radius: 10px;
+          box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+          border: 2px dotted rgb(132, 15, 15);
         }
         .card-body a {
             color: #000; 
@@ -143,5 +148,11 @@
                 .catch(handle_error);
         });
     </script>
+   
+    <div class="card text-bg-dark bg-dark text-white mb-3" style="max-width:100%"  >
+        <div class="card-body">
+            <img src="https://media.formula1.com/image/upload/f_auto,c_limit,w_195,q_auto/etc/designs/fom-website/images/f1_logo" width=70px>
+        </div>
+    </div>
 </body>
 </html>
