Le cambie algo del diseño

--- a/frontend/fechas/index.html
+++ b/frontend/fechas/index.html
@@ -6,8 +6,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../style.css">
-    <title>Formula 1</title>
+   <style>
+        nav a {
+            color: #ddd;
+         }
+         a{
+            color:rgb(19, 19, 19);
+        }
+        #lista .list-group-item {
+         padding: 15px 70px; 
+        font-size: 12px;
+        }
+        #lista {
+        font-size: 10px; 
+        padding: 20px;
+    }
+    </style>
+    <title>Resultados</title>
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
@@ -46,7 +61,7 @@
         </div>
     </nav>
 </header>
-    <h1>Fechas</h1>
+    <h1>Carreras</h1>
     <ol id="lista" class="list-group"></ol>
     </header>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
