--- a/frontend/fechas/index.html
+++ b/frontend/fechas/index.html
@@ -13,6 +13,10 @@
          a{
             color:rgb(19, 19, 19);
         }
+        h1 {
+            font-weight: 700;
+            text-align: center;
+        }
         #lista .list-group-item {
          padding: 15px 70px; 
         font-size: 12px;
