--- a/frontend/fechas/tabla/index.html
+++ b/frontend/fechas/tabla/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../../style.css">
-    <title>Formula 1</title>
+    <title>Resultados</title>
+    <style>
+         a {
+          color: #ddd;
+        }
+    </style>
 </head>
 <body>
     <header class="container-fluid bg-danger d-flex">
