modifique los hrefs de resultados

--- a/frontend/fechas/tabla/index.html
+++ b/frontend/fechas/tabla/index.html
@@ -39,9 +39,9 @@
                           Resultados
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="../../index.html?fecha=2024">2024</a>
-                          <a class="dropdown-item" href="../../index.html?fecha=2023">2023</a>
-                          <a class="dropdown-item" href="../../index.html?fecha=2022">2022</a>
+                          <a class="dropdown-item" href="../index.html?fecha=2024">2024</a>
+                          <a class="dropdown-item" href="../index.html?fecha=2023">2023</a>
+                          <a class="dropdown-item" href="../index.html?fecha=2022">2022</a>
                         </div>
                       </li>
                       <li class="nav-item">
