Añadi dos botones (no hacen nada aun)

--- a/frontend/pilotos/index.html
+++ b/frontend/pilotos/index.html
@@ -85,6 +85,10 @@
                                 <h5>Nacionalidad: <span id="nacionalidad"></span></h5>
                                 <h5>Podios: <span id="podios"></span></h5>
                                 <h5>Campeonatos Mundiales: <span id="campeonatos"></span></h5>
+                                 <td>
+                                    <button type="button" class="btn btn-sm btn-primary edit-pilot" data-id="${pilot.id}">Editar</button>
+                                    <button type="button" class="btn btn-sm btn-danger delete-pilot" data-id="${pilot.id}">Eliminar</button>
+                                </td> 
                             </div>
                         </div>
                     </div>
